# DragonWare

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: format-check.yml  nightly-build-unstable.yml  os-full-check.yml  tidycheck.yml
base/: CMakeLists.txt  linker-flat.lds
base/dcp/: command.c  command.h  ipc_console.c  ipc_console.h  main.c
base/fbsrv/: main.c
base/iopl/: main.c
base/ps2kbd/: io.h  port.h  protocol.h  ps2kbd.c  scantochar.h
base/ver/: ver.c
base/vgacons/: console.c  driver.c  driver.h  protocol.h
bootmanager/: CMakeLists.txt
bootmanager/bootsect/cdrom/: bootcd.asm
bootmanager/bootsect/hdd/: boot.asm
bootmanager/core/: linker.lds
bootmanager/core/common/: error.c  error.h  frame.c  frame.h  highmem.c  highmem.h  kmalloc.c  kmalloc.h  memdetect.c  memdetect.h
bootmanager/core/cpu/: bioscall.asm  bioscall.h  idt86.c  idt86.h  irq.c  irq.h  irqgen.asm  isr_auto.h  isrgen.asm  modeset.asm  modeset.h  pic.c  pic.h
bootmanager/core/elfldr/: elfloader.c  elfloader.h
bootmanager/core/fs/: fs.c  fs.h
bootmanager/core/fs/fat32/: fat32.c  fat32.h
bootmanager/core/fs/iso9660/: iso9660.c  iso9660.h
bootmanager/core/init/: bootentry.c  bootentry.h  jmpkrnl.asm  loader.asm  main.c  mbutils.c  mbutils.h
bootmanager/core/kbd/: kbd.c  kbd.h
bootmanager/core/proto/: multiboot.h  vbe.h
bootmanager/core/storage/: ata.c  ata.h  mbr.c  mbr.h  partition.c  partition.h
bootmanager/core/textmode/: dbgprint.c  dbgprint.h  tui.c  tui.h  vgatext.c  vgatext.h
bootmanager/core/timer/: pit.c  pit.h
bootmanager/scripts/: align_to_sector.py
cmake/: ClangToolchain.cmake  CompilerOverrides.cmake  OSVersion.cmake  i386Toolchain.cmake  i686Toolchain.cmake  sysroot.cmake
dwuser/: CMakeLists.txt
dwuser/api/: message.c  object.c
dwuser/include/: cabi.h  cppsupport.h  io.h  ipc86.h  kernelapi.h  kerneltypes.h  message.h  object.h
dwuser/include/arch/ia32/: inttypes.h
dwuser/syscall/: syscall.c
freestanding/: CMakeLists.txt
freestanding/arch/: ioport.h  power.asm
freestanding/arch/ia32/: inttypes.h  iodelay.h  power.asm  power.h
freestanding/common/: bits.h  errno.h  ktypes.h  limits.h  macros.h
freestanding/compat/: atomic.c  atomic.h
freestanding/mm/: mmutils.asm  mmutils.c  mmutils.h
freestanding/string/: kstring.h  string.asm  string.c
libc/: CMakeLists.txt  crt0.asm
libc/compat/: arith64.c
libc/generic/: errno.c  init.c  stdio.c  stdlib.c  string.c
libc/include/: dlibc_common.h  errno.h  iso646.h  limits.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
libc/include/machine/ia32/: _stdint.h
libc/include/syscalls/: syscall86.h
libc/syscalls/: syscall86.asm
sys/: .gitignore  CMakeLists.txt  linker.lds
sys/ddk/ia32/: cpu.c  cpu.h  ctxswitch.asm  ctxswitch.c  ctxswitch.h  debug.h  exception.c  exception.h  gdt.c  gdt.h  gdt_x86.asm  idt.c  idt.h  interrupts.h  irq.c  irq.h  isr.asm  isr.h  kcpuid.h  kcpuid_x86.asm  paging.h  pic.c  pic.h  smbios.c  smbios.h  sysenter.asm  tss.h  vmm.c  vmm.h  vmm_x86.asm
sys/ddk/ia32/boot/: bootia32.asm  multiboot.asm
sys/drivers/: CMakeLists.txt  driversdk.h  initdriver.c  initdriver.h
sys/drivers/serial86/: com.c
sys/drivers/vbe86/: driver.c  fbstate.h  vbe.h
sys/drivers/vgatext/: textmode.c
sys/fonts/: README.txt  glyph.c  glyph.h  psfparse.c  psfparse.h  spleen.c  spleen.h
sys/init/: bootinfo.c  bootinfo.h  main.c  state.c  state.h  wfi.c  wfi.h
sys/iomgr/: class.h  devmgr.c  devmgr.h  node.c  node.h  object.c  object.h  port.c  port.h  section.c  section.h
sys/lib/: assert.h  early_kmalloc.c  early_kmalloc.h  kmalloc.c  kmalloc.h  log.c  log.h  panic.c  panic.h  sanitize.c  spinlock.h  stackprot.c  stdio.c  stdio.h
sys/lib/asm86/: macros.asm
sys/mem/: frame.c  frame.h  mm.c  mm.h
sys/sched/: schedule.c  schedule.h
sys/syscall/: identify.h  ipc.c  ipc.h  object.c  object.h  syscall.c  syscall.h  usercopy.c  usercopy.h
sys/task/: message.c  message.h  process.c  process.h  task.asm  task.c  task.h
sys/time/: systime.c  systime.h  timer.c  timer.h
sys/video/: output.c  output.h  pixels.h
tools/: backtrace-to-line.sh  bochsdbg.cfg  bochsgdb.cfg  format-all.sh  run-bochs.py  run-qemu.py  write-bootloader.sh
